unpackaged/main/default/objects/pse__Timecard__c/fields/Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Type__c</fullName>
    <formula>TEXT(pse__Assignment__r.Assignment_Type__c)</formula>
    <label>Assignment Type</label>
    <type>Text</type>
</CustomField>