unpackaged/main/default/objects/pse__Timecard__c/fields/Billing_Event_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Event_Invoice_Date__c</fullName>
    <description>IT3088770</description>
    <formula>pse__Billing_Event_Item__r.pse__Billing_Event__r.pse__Invoice_Date__c</formula>
    <label>Oracle Invoice Date</label>
    <type>Date</type>
</CustomField>