unpackaged/main/default/objects/pse__Timecard__c/fields/F5_Product__c.field-meta.xml
<CustomField>
    <fullName>F5_Product__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>TEXT(pse__Timecard_Header__r.F5_Product__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>F5 Product</label>
    <type>Text</type>
</CustomField>