unpackaged/main/default/objects/pse__Timecard__c/fields/Monday_Travel_Hours__c.field-meta.xml
<CustomField>
    <fullName>Monday_Travel_Hours__c</fullName>
    <formula>pse__Timecard_Header__r.Mon_Travel_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monday Travel Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>