unpackaged/main/default/objects/pse__Timecard__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>IF ( weekday_number__c = 1 , (pse__Sunday_Notes__c),
IF( weekday_number__c = 2 , (pse__Monday_Notes__c),
IF( weekday_number__c = 3 , (pse__Tuesday_Notes__c),
IF( weekday_number__c = 4 , (pse__Wednesday_Notes__c),
IF( weekday_number__c = 5 ,(pse__Thursday_Notes__c),
IF( weekday_number__c = 6 , (pse__Friday_Notes__c),
IF( weekday_number__c = 7 , (pse__Saturday_Notes__c),
"")))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notes</label>
    <type>Text</type>
</CustomField>