unpackaged/main/default/objects/pse__Timecard__c/fields/Oracle_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Invoice_Number__c</fullName>
    <description>IT3088770</description>
    <formula>pse__Billing_Event_Item__r.pse__Billing_Event__r.pse__Invoice_Number__c</formula>
    <label>Oracle Invoice Number</label>
    <type>Text</type>
</CustomField>