unpackaged/main/default/objects/pse__Timecard__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <description>IT3029749. Field maps to Project Owner</description>
    <formula>pse__Project__r.Owner:User.FirstName + " " + pse__Project__r.Owner:User.LastName</formula>
    <label>Project Owner</label>
    <type>Text</type>
</CustomField>