unpackaged/main/default/objects/pse__Timecard__c/fields/Rev_Rec_Method__c.field-meta.xml
<CustomField>
    <fullName>Rev_Rec_Method__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>pse__Milestone__r.Rev_Rec_Method__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rev Rec Method</label>
    <type>Text</type>
</CustomField>