unpackaged/main/default/objects/pse__Timecard__c/fields/Revenue_Recognized__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Recognized__c</fullName>
    <formula>TEXT(pse__Timecard_Header__r.Revenue_Recognized__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Recognized</label>
    <type>Text</type>
</CustomField>