unpackaged/main/default/objects/pse__Timecard__c/fields/Services_Product__c.field-meta.xml
<CustomField>
    <fullName>Services_Product__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>pse__Timecard_Header__r.Milestone_Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Services Product</label>
    <type>Text</type>
</CustomField>