unpackaged/main/default/objects/pse__Timecard__c/fields/Sunday_Travel_Hours__c.field-meta.xml
<CustomField>
    <fullName>Sunday_Travel_Hours__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>pse__Timecard_Header__r.Sun_Travel_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sunday Travel Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>