unpackaged/main/default/objects/pse__Timecard__c/fields/Total_Billable_Remote_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Billable_Remote_Hours__c</fullName>
    <formula>IF(pse__Billable__c = TRUE, pse__Total_Hours__c - Total_Weekly_Onsite_Travel_Hours__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Billable Remote Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>