unpackaged/main/default/objects/pse__Timecard__c/fields/Total_Consultant_Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Consultant_Travel_Time__c</fullName>
    <formula>IF(ISPICKVAL(pse__Assignment__r.Assignment_Type__c, "Consultant Travel Time"),pse__Total_Hours__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Consultant Travel Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>