unpackaged/main/default/objects/pse__Timecard__c/fields/Total_FOC_Donated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_FOC_Donated_Hours__c</fullName>
    <formula>IF(ISPICKVAL(pse__Assignment__r.Assignment_Type__c, "Free of Charge-Donated"), pse__Total_Hours__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total FOC - Donated Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>