unpackaged/main/default/objects/pse__Timecard__c/fields/Total_Internal_Project_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Internal_Project_Hours__c</fullName>
    <formula>IF(pse__Project__r.Name = "Internal Projects", pse__Total_Hours__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Internal Project Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>