unpackaged/main/default/objects/pse__Timecard__c/fields/Total_Weekly_Onsite_Travel_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Weekly_Onsite_Travel_Hours__c</fullName>
    <formula>IF(pse__Billable__c = TRUE, Sunday_Travel_Hours__c + Monday_Travel_Hours__c + Tuesday_Travel_Hours__c + Wednesday_Travel_Hours__c + Thursday_Travel_Hours__c + Friday_Travel_Hours__c + Saturday_Travel_Hours__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Billable Onsite (Travel Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>