unpackaged/main/default/objects/pse__Timecard__c/fields/Tuesday_Travel_Hours__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_Travel_Hours__c</fullName>
    <description>ADO 269310 Lift and Shift PSA Prod to GTM</description>
    <formula>pse__Timecard_Header__r.Tue_Travel_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tuesday Travel Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>