unpackaged/main/default/objects/pse__Timecard__c/fields/weekday_number__c.field-meta.xml
<CustomField>
    <fullName>weekday_number__c</fullName>
    <formula>WEEKDAY( pse__Start_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>weekday number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>