unpackaged/main/default/objects/pse__Timecard__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>pse__Resource__c</columns>
    <columns>pse__Timecard_Header__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Sunday_Hours__c</columns>
    <columns>pse__Monday_Hours__c</columns>
    <columns>pse__Tuesday_Hours__c</columns>
    <columns>pse__Wednesday_Hours__c</columns>
    <columns>pse__Thursday_Hours__c</columns>
    <columns>pse__Friday_Hours__c</columns>
    <columns>pse__Saturday_Hours__c</columns>
    <columns>pse__Total_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Billable__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>pse__Eligible_for_Billing__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>